--- a/public/views/documentation/index.html
+++ b/public/views/documentation/index.html
@@ -16,6 +16,7 @@
   });
   </script>
   <style>
+
   .affix {
     top: 0;
     width: 100%;
@@ -31,9 +32,13 @@
 }
 #handle {
     width: 100%;
-    height: 5px;
+    height: 9px;
     top: -6px;
     background-color: #d3d3d3;
+}
+#map {
+  height:100%;
+  width:100%;
 }
   .affix + .container-fluid {
     padding-top: 70px;
@@ -51,6 +56,27 @@ background-color:rgb(207,181,59);
 color:#fff;
 height:200px;
   }
+  nav {
+    z-index:9;
+  }
+  #googleSheets {
+    font-size:35px;
+  }
+.ol-touch.filterButton {
+    top: 80px;
+}
+.ol-touch.editButton {
+    top: 110px;
+}
+.filterButton {
+    top: 65px;
+    left: .5em;
+}
+
+.editButton {
+    top: 95px;
+    left: .5em;
+}
   </style>
   <!-- these libraries go in the head, all others belong in the body -->
     <script src="/js/classes/gDriveSelector.js"></script>
@@ -58,12 +84,17 @@ height:200px;
     </script>
       <script>
         $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
-                $(".resizable").resizable({
+      $(".resizable").resizable({
         handles: {
             'n': '#handle'
         }
-    });
+        
+      });
+      $( "#googleSheets" ).change(function() {
+          var val = $("#googleSheets").val() 
+          if(typeof val === 'string')
+                window.location = window.location.origin+val;
+        });
         });
     </script>
     <!-- begin ng-timemap includes  -->
@@ -76,7 +107,7 @@ height:200px;
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
     <!-- Optional theme -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+  
     <!-- Latest compiled and minified JavaScript -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link href="./plugins/css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
@@ -84,7 +115,15 @@ height:200px;
     src="//code.jquery.com/ui/1.12.0-beta.1/jquery-ui.min.js"></script>
 <link rel="stylesheet" type="text/css"
     href="//:code.jquery.com/ui/1.12.0-beta.1/themes/smoothness/jquery-ui.css"/>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.4/css/bootstrap-select.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.4/js/bootstrap-select.min.js"></script>
+
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <!-- end ng-timemap includes -->
+
   </head>
 <body>
 
@@ -92,35 +131,32 @@ height:200px;
   <h1>ng-TimeMap</h1>
   <h3>A javascript library for showing information from a Google Spreadsheet simultaneously on a map and timeline.</h3>
   
-      <div id="authorize-div" style="display: none">
+  <div id="authorize-div" style="display: none">
      <button  data-toggle="tooltip" title="To edit or load spreadsheets, ng-TimeMap must have access to your Google Drive account." type="button" class="btn btn-danger btn-block" id="authorize-button" onclick="handleAuthClick(event)">Authorize access to Google Drive</button>
 </div>
    
-  <a href="//drive.google.com/previewtemplate?id=1a2-xinkwgp35KlPPm7blqRjzFjhCfNw-HJsN8Bi7ruA&mode=public" type="button" class="btn btn-default btn-lg">Get the Spreadsheet Template</a> or
-<!-- Single button -->
-<div class="btn-group">
-  <button type="button" class="btn btn-default  dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Select a Spreadsheet from your Google Drive account
-  </button>
-  <!-- gDriveSelector.js injects loadable spreadsheets to #googleSheets -->
-  <div id="googleSheets" class="dropdown-menu">
-    <!-- maps go here -->
-  </div>
-</div>
+  <a href="//drive.google.com/previewtemplate?id=1a2-xinkwgp35KlPPm7blqRjzFjhCfNw-HJsN8Bi7ruA&mode=public" type="button" class="btn btn-default btn-md">Get the Spreadsheet Template</a> or
+     <select name="googleSheets" id="googleSheets">
+      <option>Load a Spreadsheet from your Google Drive account</option>
+    </select>
 </div>
 <!--- begin menu container -->
-<nav class="navbar navbar-inverse" style="z-index:999999999;" data-spy="affix" data-offset-top="207">
+<nav class="navbar navbar-inverse"  data-spy="affix" data-offset-top="207">
   <ul class="nav navbar-nav">
     <li class="active"><a href="#">View</a></li>
-    <li><a href="#">Edit</a></li>
-    <li><a href="#">Help</a></li>
-    <li><a href="#">Share</a></li>
+    <li><a href="#"><i class="fa fa-pencil"></i> Edit</a></li>
+    <li><a href="//zachphillipsgary.github.io/ng-timemap-improvements-/"><i class="fa fa-question-circle"></i> 
+Help</a></li>
+    <li><a href="#"><i class="fa fa-bullhorn"></i>  
+Share</a></li>
+    <li><a href="//github.com/ZachPhillipsGary/ng-timemap-improvements-"><i class="fa fa-github-alt"></i> GitHub</a></li>
+
   </ul>
 </nav>
 <!-- timemap area -->
 <div class="container-fluid" style="height:1000px">
     <div id="output"></div>
-        <div id="mapObjects"></div>
+        <div  id="mapObjects"></div>
         <div id="map" class="map"></div>
         <div id="container" class="resizable">
     <div id="handle" class="ui-resizable-handle ui-resizable-n"></div>
