--- a/public/views/index.html
+++ b/public/views/index.html
@@ -19,12 +19,42 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link href="./plugins/css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
+    <script type="text/javascript"
+    src="//code.jquery.com/ui/1.12.0-beta.1/jquery-ui.min.js"></script>
+<link rel="stylesheet" type="text/css"
+    href="//:code.jquery.com/ui/1.12.0-beta.1/themes/smoothness/jquery-ui.css"/>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.4/css/bootstrap-select.min.css">
 
+<!-- Latest compiled and minified JavaScript -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.4/js/bootstrap-select.min.js"></script>
     <script>
         $(document).ready(function() {
             $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
+    <style>
+    
+  .affix {
+    top: 0;
+    width: 100%;
+  }
+#container {
+    width: 100%;
+    height: 100px;
+    position: fixed !important;
+    top: auto !important;
+    bottom: 0 !important;
+    left: 0;
+    right: 0;
+}
+#handle {
+    width: 100%;
+    height: 9px;
+    top: -6px;
+    background-color: #d3d3d3;
+}
+    </style>
 </head>
 
 <body>
@@ -32,12 +62,12 @@
     <main class="page-row page-row-expanded">
         <div id="mapObjects"></div>
         <div id="map" class="map"></div>
-    </main>
-    <footer class="page-row">
-        <div id="timeline">
+         <div id="handle" class="ui-resizable-handle ui-resizable-n"></div>
+       <div  id="timeline">
             <div id="popup"></div>
         </div>
-    </footer>
+    </main>
+
 
 
 
