--- a/public/views/documentation/index.html
+++ b/public/views/documentation/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>College of Wooster TimeMap Tool</title>
+  <title>The College of Wooster TimeMap Tool</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -10,11 +10,7 @@
       <script src="http://www.zachs.space/tm/js/classes/gDriveSelector.js"></script>
       <script src="//apis.google.com/js/client.js?onload=checkAuth">
     </script>
-  <script>
-  $(document).ready(function(){
-     $('.navbar-nav a[href]').click(function (e) { e.preventDefault(); });
-  });
-  </script>
+
   <style>
 
   .affix {
@@ -83,6 +79,16 @@ height:200px;
       <script src="//apis.google.com/js/client.js?onload=checkAuth">
     </script>
       <script>
+      function generateEmbedCodes() {
+          var URL = window.location.origin+"/em/"+window.location.search+window.location.hash;
+          $("#URL").val(URL);
+          //create iframe
+        var height = $("#height").val();
+        var width = $("#width").val();
+        var iframe = "<iframe src=\""+URL+"\"+height=\""+height+"\" width=\""+width+"\"><p>Your browser does not support iframes.</p><a href=\""+URL+"\">Click here to view the content</a></iframe>";
+$("#HTML").val(iframe);
+$("#preview").html(iframe);
+      } 
         $(document).ready(function() {
       $(".resizable").resizable({
         handles: {
@@ -95,6 +101,14 @@ height:200px;
           if(typeof val === 'string')
                 window.location = window.location.origin+val;
         });
+
+      $( "#height" ).change(function() {
+          generateEmbedCodes()
+      });
+    $( "#width" ).change(function() {
+            generateEmbedCodes()
+      });
+    generateEmbedCodes();
         });
     </script>
     <!-- begin ng-timemap includes  -->
@@ -128,7 +142,7 @@ height:200px;
 <body>
 
 <div class="container-fluid" id="getStartedMenu">
-  <h1>ng-TimeMap</h1>
+  <h1>ng-TimeMap <i>alpha</i></h1>
   <h3>A javascript library for showing information from a Google Spreadsheet simultaneously on a map and timeline.</h3>
   
   <div id="authorize-div" style="display: none">
@@ -147,7 +161,7 @@ height:200px;
     <li><a href="#"><i class="fa fa-pencil"></i> Edit</a></li>
     <li><a href="//zachphillipsgary.github.io/ng-timemap-improvements-/"><i class="fa fa-question-circle"></i> 
 Help</a></li>
-    <li><a href="#"><i class="fa fa-bullhorn"></i>  
+    <li><a href="#"  data-toggle="modal" data-target="#EmbeddableTM"><i class="fa fa-bullhorn"></i>  
 Share</a></li>
     <li><a href="//github.com/ZachPhillipsGary/ng-timemap-improvements-"><i class="fa fa-github-alt"></i> GitHub</a></li>
 
@@ -202,6 +216,42 @@ Share</a></li>
             'debug': false
         });
   </script>
+  <!-- Modal -->
+  <div class="modal fade" id="EmbeddableTM" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Create Embeddable TimeMap</h4>
+        </div>
+        <div class="modal-body">
+          <form id="URLzone"><label for="URL">URL:</label>
+      <input type="text" class="form-control" id="URL">
+    <form id="URL"><label for="URL">HTML:</label>
+      <input type="text" class="form-control" id="HTML"></form>
+         <form  role="form">
+    <div style="width:25%" class="form-group">
+      <label for="height">Height:</label>
+      <input value="500px" type="text" class="form-control" id="height">
+ <label for="height">Width:</label>
+      <input value="500px" type="text" class="form-control" id="width">
+    </div>
+ <label for="preview">Preview:</label>
+
+<div id="preview"></div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+  
+</div>
+
 </body>
 </html>
 
