--- a/public/views/old/index.html
+++ b/public/views/old/index.html
@@ -195,6 +195,22 @@ Share</a></li>
     <script src="./js/timemap.js"></script>
     <!-- End JS includes -->
     <script>
+    function setCookie(cname, cvalue, exdays) {
+    var d = new Date();
+    d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
+    var expires = "expires=" + d.toUTCString();
+    document.cookie = cname + "=" + cvalue + "; " + expires;
+    }
+    function getCookie(cname) {
+    var name = cname + "=";
+    var ca = document.cookie.split(';');
+    for(var i=0; i<ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0)==' ') c = c.substring(1);
+        if (c.indexOf(name) == 0) return c.substring(name.length,c.length);
+    }
+    return "";
+    }
         /**
          * Define a name space for the application.
          */
@@ -202,10 +218,14 @@ Share</a></li>
         //load key from URL
         app.key = getURLParameter('key');
         if (typeof app.key !== "string") {
+          if (getCookie('visited') !== "") {
           //try once to get a valid key
             app.key = prompt("Error: Could not find map to load.", "Enter the key of the Google Drive Spreadsheet below to continue:");
             //add the inserted key into the url
             insertParam("key",app.key);
+          } else {
+            setCookie("visited","true",90)
+          }
         }
             
         //create a time-map instance
