--- a/public/views/other/index.html
+++ b/public/views/other/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-    <title>COW Mapping Tool</title>
-    <link rel="stylesheet" href="./css/mainstyle.css">
+    <title>COW Mapping Tool for IFrames</title>
+
+    <link rel="stylesheet" href="../css/mainstyle.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.11.0/vis.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.11.0/vis.min.css" type="text/css">
     <link rel="stylesheet" href="http://openlayers.org/en/v3.12.1/css/ol.css" type="text/css">
@@ -13,32 +14,32 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.0-beta.1/jquery-ui.min.js"></script>
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <link href="./plugins/css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
-    <script type="text/javascript"
-    src="//code.jquery.com/ui/1.12.0-beta.1/jquery-ui.min.js"></script>
-<link rel="stylesheet" type="text/css"
-    href="//:code.jquery.com/ui/1.12.0-beta.1/themes/smoothness/jquery-ui.css"/>
-    <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.4/css/bootstrap-select.min.css">
+      <link href="../plugins/css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.4/js/bootstrap-select.min.js"></script>
     <script>
         $(document).ready(function() {
             $('[data-toggle="tooltip"]').tooltip();
+
+             $(".resizable").resizable({
+        handles: {
+            'n': '#handle'
+        }
+        });
         });
     </script>
     <style>
-    
-  .affix {
-    top: 0;
+#handle {
     width: 100%;
-  }
+    height: 9px;
+    top: -6px;
+    background-color: #d3d3d3;
+}
 #container {
     width: 100%;
     height: 100px;
@@ -63,9 +64,12 @@
         <div id="mapObjects"></div>
         <div id="map" class="map"></div>
          <div id="handle" class="ui-resizable-handle ui-resizable-n"></div>
+         <div id="container" class="resizable">
+    <div id="handle" class="ui-resizable-handle ui-resizable-n"></div>
        <div  id="timeline">
             <div id="popup"></div>
         </div>
+    </div>
     </main>
 
 
@@ -73,21 +77,20 @@
 
     <!-- end filter modal -->
     <!-- Begin JS includes -->
-    <script src="./plugins/js/jquery.multi-select.js" type="text/javascript"></script>
-    <script src="./js/classes/gDriveSelector.js"></script>
-    <script src="./js/classes/gDriveLoader.js"></script>
-    <script src="./js/lib/overloads.js"></script>
-    <script src="./js/classes/ui.js"></script>
-    <script src="./js/classes/marker.js"></script>
-    <script src="./js/classes/geojsonlayer.js"></script>
-    <script src="./js/classes/makerset.js"></script>
-    <script src="./js/classes/remotelayer.js"></script>
-    <script src="./js/classes/timeline.js"></script>
-    <script src="./js/classes/map.js"></script>
-    <script src="./js/timemap.js"></script>
+    <script src="../plugins/js/jquery.multi-select.js" type="text/javascript"></script>
+    <script src="../js/classes/gDriveSelector.js"></script>
+    <script src="../js/classes/gDriveLoader.js"></script>
+    <script src="../js/lib/overloads.js"></script>
+    <script src="../js/classes/ui.js"></script>
+    <script src="../js/classes/marker.js"></script>
+    <script src="../js/classes/geojsonlayer.js"></script>
+    <script src="../js/classes/makerset.js"></script>
+    <script src="../js/classes/remotelayer.js"></script>
+    <script src="../js/classes/timeline.js"></script>
+    <script src="../js/classes/map.js"></script>
+    <script src="../js/timemap.js"></script>
     <!-- End JS includes -->
 
-    <script src="/js/testsuite.js"></script>
     <script>
         /**
          * Define a name space for the application.
@@ -112,20 +115,7 @@
 
         /* Add sliding effect to timeline */
 
-  $("footer div").animate({bottom: '-205px'});
-$('footer div')
-    .on('mouseenter', function(){
-        var div = $(this);
-        div.stop(true, true).animate({ 
-            height: "+=170"
-        }, 'fast');
-    })
-    .on('mouseleave', function(){
-        var div = $(this);
-        div.stop(true, true).animate({ 
-            height: "-=170"
-        }, 'fast');
-    })
+
     </script>
 
 <!-- Modal -->
